# Arms

./: .gitignore  Cargo.toml  LICENSE  main  text.txt
ToyCat/: Cargo.toml
ToyCat/src/: main.rs
ToyCp/: Cargo.toml
ToyEcho/: Cargo.toml
ToyEcho/src/: main.rs
ToyRm/: Cargo.toml
ToyRm/src/: main.rs
command/: Cargo.toml
command/src/: cp.rs  rm.rs
microshell/: Cargo.toml
microshell/src/: file  main.rs  process.rs
microshell/src/process/: builtin_cmd.rs  display.rs  fork.rs  parse.rs  redirect.rs  signal.rs
src/: main  main.rs
