[package]
name = "Arms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"
